test/files/neg/t6446-show-phases.scala

// testing compiler flag output only
object Test extends App
